style errors and messages partials

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,3 +68,8 @@ footer ul li{
   float:left;
   margin-left:15px;
 }
+
+.navbar-default .navbar-nav > .open > a:focus {
+  background-color: #2c699d;
+  color: #fff;
+}
