--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,15 +1,8 @@
-<% if @article.errors.any? %>
-  <h2>The following errors prevented article from getting created</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render 'shared/errors',obj: @article %>
 
 <div class="row">
   <div class="col-xs-12">
-    <%= form_for(@article, :html => {class:"form-horizontal",role: "form"}) do |f| %>
+    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
       <div class="form-group">
         <div class="col-sm-2 control-label">
           <%= f.label :title %>
@@ -34,7 +27,7 @@
     <% end %>
 
     <div class="col-xs-4 col-xs-offset-4">
-    [ <%= link_to 'Cancel request and return to articles listing', articles_path %> ]
+      [ <%= link_to 'Cancel request and return to articles listing', articles_path %> ]
     </div>
   </div>
 </div>
