--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -44,6 +44,15 @@ $navbar-default-bg: rgb(51, 122, 183);
   color:#B0B0B0;
 }
 
+.article-actions{
+  border-top:1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description{
+  margin-top:0;
+}
+
 footer{
   margin-top: 45px;
   padding-top: 5px;
