--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -44,6 +44,11 @@ $navbar-default-bg: rgb(51, 122, 183);
   color:#B0B0B0;
 }
 
+.article-meta-details{
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
 .article-actions{
   border-top:1px solid #eaeaea;
   padding-top: 5px;
